--- a/notes-app.html
+++ b/notes-app.html
@@ -1,14 +1,21 @@
 <head>
-  <title>notes-app</title>
+  <title>Notes</title>
 </head>
-
+ 
 <body>
-  <h1>Notes App</h1>
-
-  {{> hello}}
+  <div class="container">
+    <header>
+      <h1>Notes</h1>
+    </header>
+ 
+    <ul>
+      {{#each notes}}
+        {{> note}}
+      {{/each}}
+    </ul>
+  </div>
 </body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+ 
+<template name="note">
+  <li>{{text}}</li>
 </template>
