--- a/notes-app.html
+++ b/notes-app.html
@@ -8,6 +8,7 @@
   <div class="container">
     <header>
       <h1>Notes</h1>
+      	<input type="text" placeholder="Search notes" class="search-notes"/>
     </header>
 
     <form class="new-note">
